# twss.hs

./: .gitignore  Classify.hs  Demo.hs  Document.hs  Main.hs  Makefile  README.markdown  Twss.hs  Utils.hs  analyze.hs  classify.hs  document.hs  negative  positive  twss.cabal  twss.hs
Data/: Positive_Prompts_T.hs
data/: NegativePrompts.hs  Negative_Prompts_T.hs  PositivePrompts.hs
src/: Classify.hs  Document.hs  Main.hs  Twss.hs  Utils.hs
